# react-live

./: README.md
lerna-discrte/: package.json
lerna-discrte/app/: layout.tsx  page.tsx  tableList copy.tsx  tableList.tsx
lerna-discrte/discrete-core/: .gitignore  Cargo.toml  build_watch.sh
lerna-discrte/discrete-core/src/: lib.rs  mocker.rs
start-nextjs/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
start-nextjs/component/layout/: index.tsx
start-nextjs/lib/: posts.tsx
start-nextjs/pages/: _app.js  index.tsx
start-nextjs/pages/posts/: [id].tsx  first-post.tsx
start-nextjs/src/: lib.rs
start-nextjs/styles/: globals.mudule.css
template-ast/: app.jsx  ast.js  ast.json  ast2.json  compile-bound.js  compile.js  hbs.html  layout.hbs  nunjucks-Extension.js  nunjucks-ast.js  nunjucks.js  package.json
template-ast/example/: example.handlebars  example.precompiled.js
template-ast/layout/: about.hbs  app.js  footer.hbs  heade.hbs  home.hbs  main.hbs
template-ast/nodejs-handelbars/: client.js  precompile.js
